--- a/portfolio.html
+++ b/portfolio.html
@@ -7,6 +7,7 @@
 
     <link rel="stylesheet" type="text/css" href="assets/css/style.css">
     <link rel="stylesheet" type="text/css" href="assets/css/reset.css">
+    <link rel="stylesheet" type="text/css" href="assets/css/grid.css">
 </head>
 
 <body>
@@ -30,25 +31,41 @@
                 <h2>Portfolio</h2>
             </div>
             <div class="portfolio">
-                <div class="project">
-                    <img class="placeholder-pic" src="assets/images/halloffame.jpg" alt="Country Fame" />
-                    <div class="project-title"><h3>Project Title</h3></div>
+                <div class="row">
+                    <div class="project">
+                        <img class="placeholder-pic" src="assets/images/halloffame.jpg" alt="Country Fame" />
+                        <div class="project-title">
+                            <h3>Recorded Gold</h3>
+                        </div>
+                    </div>
+                    <div class="project">
+                        <img class="placeholder-pic" src="assets/images/elvisbar.jpg" alt="Elvis's Bar'" />
+                        <div class="project-title">
+                            <h3>Drink with Elvis</h3>
+                        </div>
+                    </div>
                 </div>
-                <div class="project">
-                    <img class="placeholder-pic" src="assets/images/elvisbar.jpg" alt="Elvis's Bar'" />
-                    <div class="project-title"><h3>Project Title</h3></div>
+                <div class="row">
+                    <div class="project">
+                        <img class="placeholder-pic" src="assets/images/visionaryartmuseum.jpg" alt="Visionary Art Museum" />
+                        <div class="project-title">
+                            <h3>Envision Art</h3>
+                        </div>
+                    </div>
+                    <div class="project">
+                        <img class="placeholder-pic" src="assets/images/cherry_blossoms.jpg" alt="Cherry Blossoms" />
+                        <div class="project-title">
+                            <h3>Blossom the Cherries</h3>
+                        </div>
+                    </div>
                 </div>
-                <div class="project">
-                    <img class="placeholder-pic" src="assets/images/visionaryartmuseum.jpg" alt="Visionary Art Museum" />
-                    <div class="project-title"><h3>Project Title</h3></div>
-                </div>
-                <div class="project">
-                    <img class="placeholder-pic" src="assets/images/cherry_blossoms.jpg" alt="Cherry Blossoms" />
-                    <div class="project-title"><h3>Project Title</h3></div>
-                </div>
-                <div class="project">
-                    <img class="placeholder-pic" src="assets/images/baltimore.jpg" alt="Baltimore" />
-                    <div class="project-title"><h3>Project Title</h3></div>
+                <div class="row">
+                    <div class="project">
+                        <img class="placeholder-pic" src="assets/images/baltimore.jpg" alt="Baltimore" />
+                        <div class="project-title">
+                            <h3>Dive into Baltimore</h3>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
