--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 
     <link rel="stylesheet" type="text/css" href="assets/css/style.css">
     <link rel="stylesheet" type="text/css" href="assets/css/reset.css">
+    <link rel="stylesheet" type="text/css" href="assets/css/grid.css">
 </head>
 
 <body>
