--- a/portfolio.html
+++ b/portfolio.html
@@ -33,13 +33,15 @@
             <div class="portfolio">
                 <div class="row">
                     <div class="project">
-                        <img class="placeholder-pic" src="assets/images/halloffame.jpg" alt="Country Fame" />
+                        <!--<img class="placeholder-pic" src="assets/images/halloffame.jpg" alt="Country Fame" />-->
+                        <img class="placeholder-pic" src="https://docs.google.com/drawings/d/1GP2sxnfE8WedVe6rnsIlKO8tSi75UOEBFOdc2-9Xgdk/pub?w=927&amp;h=662">
                         <div class="project-title">
                             <h3>Recorded Gold</h3>
                         </div>
                     </div>
                     <div class="project">
-                        <img class="placeholder-pic" src="assets/images/elvisbar.jpg" alt="Elvis's Bar'" />
+                        <!--<img class="placeholder-pic" src="assets/images/elvisbar.jpg" alt="Elvis's Bar'" />-->
+                        <img class="placeholder-pic" src="https://docs.google.com/drawings/d/1fMvUSooe4yCfe4mi2_7gCXPVdV4NcAxd1gbjz0422FQ/pub?w=927&amp;h=662">
                         <div class="project-title">
                             <h3>Drink with Elvis</h3>
                         </div>
@@ -47,13 +49,15 @@
                 </div>
                 <div class="row">
                     <div class="project">
-                        <img class="placeholder-pic" src="assets/images/visionaryartmuseum.jpg" alt="Visionary Art Museum" />
+                        <!--<img class="placeholder-pic" src="assets/images/visionaryartmuseum.jpg" alt="Visionary Art Museum" />-->
+                        <img class="placeholder-pic" src="https://docs.google.com/drawings/d/1QyCRdYsARC1JaDPmA6egMeyzXjnK7uZpXTjaIhwyQtI/pub?w=927&amp;h=665">
                         <div class="project-title">
                             <h3>Envision Art</h3>
                         </div>
                     </div>
                     <div class="project">
-                        <img class="placeholder-pic" src="assets/images/cherry_blossoms.jpg" alt="Cherry Blossoms" />
+                        <!--<img class="placeholder-pic" src="assets/images/cherry_blossoms.jpg" alt="Cherry Blossoms" />-->
+                        <img class="placeholder-pic" src="https://docs.google.com/drawings/d/1ot-LomHL3T3BiTleUMYGj8bc69dgGnAH4BUfdLGSo0g/pub?w=629&amp;h=449">
                         <div class="project-title">
                             <h3>Blossom the Cherries</h3>
                         </div>
@@ -61,7 +65,8 @@
                 </div>
                 <div class="row">
                     <div class="project">
-                        <img class="placeholder-pic" src="assets/images/baltimore.jpg" alt="Baltimore" />
+                        <!--<img class="placeholder-pic" src="assets/images/baltimore.jpg" alt="Baltimore" />-->
+                        <img class="placeholder-pic" src="https://docs.google.com/drawings/d/1YVj92UHEz-yM68DuVSP6P1iAa5a7g0CBiouPxUDKGmU/pub?w=927&amp;h=663">
                         <div class="project-title">
                             <h3>Dive into Baltimore</h3>
                         </div>
