replaced profile pic local ref with hosted ref

--- a/index.html
+++ b/index.html
@@ -31,7 +31,8 @@
                 <h2>About Jakie W. Rice</h2>
             </div>
             <div class="content">
-                <img id="profile-pic" src="assets/images/jakie_profile_1.jpg" alt="Jakie W. Rice" />
+                <!--<img id="profile-pic" src="assets/images/jakie_profile_1.jpg" alt="Jakie W. Rice" />-->
+                <img class id="profile-pic" src="https://docs.google.com/drawings/d/1XT6bhlmkmIUgegp1cnnURqYmBimKHxWI0Ql2cbJX7k8/pub?w=612&amp;h=614">
                 <p>Jakie W. Rice is the name, Jay-kee Double U Rice is the correct pronunciation. I have lived for an adventure
                     filled twenty-five years. I share my time on this planet with a beautiful wife, an incredibly brilliant
                     seven year old son, an English Mastiff (Hank), a Pitbull-Boxer (Waylon), and Pug (Cash). I have been
