updating hosted page with bootstrapped version

--- a/portfolio.html
+++ b/portfolio.html
@@ -3,95 +3,109 @@
 
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Jakie W. Rice Portfolio</title>
+
+    <!-- Latest compiled and minified CSS -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u"
+        crossorigin="anonymous">
 
     <link rel="stylesheet" type="text/css" href="assets/css/style.css">
     <link rel="stylesheet" type="text/css" href="assets/css/reset.css">
-    <link rel="stylesheet" type="text/css" href="assets/css/grid.css">
+
+
 </head>
 
 <body>
-    <!--Header and nav-->
-    <div class="header">
-        <div id="name">
-            <h1>JAKIE W. RICE</h1>
-        </div>
-        <div class="nav">
-            <ul>
-                <li><a href="index.html">About</a></li>
-                <li><a href="portfolio.html">Portfolio</a></li>
-                <li><a href="contact.html">Contact</a></li>
-            </ul>
+    <!--Header-->
+    <div class="container-fluid">
+        <div class="row header">
+            <div class="col-xs-12 col-sm-offset-2 col-sm-3" id="name">
+                <h1>JAKIE W. RICE</h1>
+            </div>
+            <div class="col-xs-12 col-sm-7 nav-items">
+                <ul>
+                    <li><a href="index.html">About</a></li>
+                    <li><a href="portfolio.html">Portfolio</a></li>
+                    <li><a href="contact.html">Contact</a></li>
+                </ul>
+            </div>
         </div>
     </div>
-    <!--Main content-->
-    <div class="main">
-        <div class="panel primary">
-            <div class="panel-header">
-                <h2>Portfolio</h2>
-            </div>
-            <div class="portfolio">
+
+    <!--Main Content-->
+    <div class="container-fluid main">
+        <div class="row">
+
+            <!--About Jakie W. Rice-->
+            <div class="col-xs-offset-1 col-xs-10 col-md-offset-1 col-md-6 card primary">
+                <div class="row card-header">
+                    <h2>Projects Portfolio</h2>
+                </div>
                 <div class="row">
-                    <div class="project">
+                    <div class="col-xs-12 col-sm-6 project">
                         <!--<img class="placeholder-pic" src="assets/images/halloffame.jpg" alt="Country Fame" />-->
-                        <img class="placeholder-pic" src="https://docs.google.com/drawings/d/1GP2sxnfE8WedVe6rnsIlKO8tSi75UOEBFOdc2-9Xgdk/pub?w=927&amp;h=662">
-                        <div class="project-title">
+                        <img class="placeholder-pic" src="assets/images/halloffame.jpg " alt="https://docs.google.com/drawings/d/1GP2sxnfE8WedVe6rnsIlKO8tSi75UOEBFOdc2-9Xgdk/pub?w=927&amp;h=662">
+                        <div class="col-xs-12 col-sm-6 project-title">
                             <h3>Recorded Gold</h3>
                         </div>
                     </div>
-                    <div class="project">
-                        <!--<img class="placeholder-pic" src="assets/images/elvisbar.jpg" alt="Elvis's Bar'" />-->
-                        <img class="placeholder-pic" src="https://docs.google.com/drawings/d/1fMvUSooe4yCfe4mi2_7gCXPVdV4NcAxd1gbjz0422FQ/pub?w=927&amp;h=662">
-                        <div class="project-title">
+                    <div class="col-xs-12 col-sm-6 project">
+                        <img class="placeholder-pic" src="assets/images/elvisbar.jpg " alt="https://docs.google.com/drawings/d/1fMvUSooe4yCfe4mi2_7gCXPVdV4NcAxd1gbjz0422FQ/pub?w=927&amp;h=662">
+                        <div class="col-xs-12 col-sm-6 project-title">
                             <h3>Drink with Elvis</h3>
                         </div>
                     </div>
                 </div>
                 <div class="row">
-                    <div class="project">
-                        <!--<img class="placeholder-pic" src="assets/images/visionaryartmuseum.jpg" alt="Visionary Art Museum" />-->
-                        <img class="placeholder-pic" src="https://docs.google.com/drawings/d/1QyCRdYsARC1JaDPmA6egMeyzXjnK7uZpXTjaIhwyQtI/pub?w=927&amp;h=665">
-                        <div class="project-title">
+                    <div class="col-xs-12 col-sm-6 project">
+                        <img class="placeholder-pic" src="assets/images/visionaryartmuseum.jpg " alt="https://docs.google.com/drawings/d/1QyCRdYsARC1JaDPmA6egMeyzXjnK7uZpXTjaIhwyQtI/pub?w=927&amp;h=665">
+                        <div class="col-xs-12 col-sm-6 project-title">
                             <h3>Envision Art</h3>
                         </div>
                     </div>
-                    <div class="project">
-                        <!--<img class="placeholder-pic" src="assets/images/cherry_blossoms.jpg" alt="Cherry Blossoms" />-->
-                        <img class="placeholder-pic" src="https://docs.google.com/drawings/d/1ot-LomHL3T3BiTleUMYGj8bc69dgGnAH4BUfdLGSo0g/pub?w=629&amp;h=449">
-                        <div class="project-title">
+                    <div class="col-xs-12 col-sm-6 project">
+                        <img class="placeholder-pic" src="assets/images/cherry_blossoms.jpg " alt="https://docs.google.com/drawings/d/1ot-LomHL3T3BiTleUMYGj8bc69dgGnAH4BUfdLGSo0g/pub?w=629&amp;h=449">
+                        <div class="col-xs-12 col-sm-6 project-title">
                             <h3>Blossom the Cherries</h3>
                         </div>
                     </div>
                 </div>
                 <div class="row">
-                    <div class="project">
-                        <!--<img class="placeholder-pic" src="assets/images/baltimore.jpg" alt="Baltimore" />-->
-                        <img class="placeholder-pic" src="https://docs.google.com/drawings/d/1YVj92UHEz-yM68DuVSP6P1iAa5a7g0CBiouPxUDKGmU/pub?w=927&amp;h=663">
-                        <div class="project-title">
+                    <div class="col-xs-12 col-sm-6 project">
+                        <img class="placeholder-pic" src="assets/images/baltimore.jpg " alt="https://docs.google.com/drawings/d/1YVj92UHEz-yM68DuVSP6P1iAa5a7g0CBiouPxUDKGmU/pub?w=927&amp;h=663">
+                        <div class="col-xs-12 col-sm-6 project-title">
                             <h3>Dive into Baltimore</h3>
                         </div>
                     </div>
                 </div>
             </div>
-        </div>
-        <div class="panel social">
-            <div class="panel-header">
-                <h2>Connect with Me</h2>
+
+            <!--Social Media Connection-->
+            <div class="col-xs-offset-1 col-xs-10 col-sm-offset-2 col-sm-8 col-md-offset-1 col-md-3 card social">
+                <div class="row card-header">
+                    <h2>Connect</h2>
+                </div>
+                <div id="icons">
+                    <a href="https://www.facebook.com"><img class="social-icon" src="assets/images/facebook_icon_black_512.png" alt="Facebook" /></a>
+                    <a href="https://www.linkedin.com/in/jakierice/"><img class="social-icon" src="assets/images/linkedin_icon_black_512.png" alt="LinkedIn" /></a>
+                    <a href="https://github.com/jakierice"><img class="social-icon" src="assets/images/github_icon_black_512.png" alt="GitHub" /></a>
+                    <a href="https://stackoverflow.com/story/jakie-w-rice"><img class="social-icon" src="assets/images/stackoverflow_icon_black_512.png" alt="Stack Overflow"/></a>
+                </div>
             </div>
-            <div id="icons">
-                <a href="https://www.facebook.com"><img class="social-icon" src="assets/images/facebook_icon_black_512.png" alt="Facebook" /></a>
-                <a href="https://www.linkedin.com/in/jakierice/"><img class="social-icon" src="assets/images/linkedin_icon_black_512.png" alt="LinkedIn" /></a>
-                <a href="https://github.com/jakierice"><img class="social-icon" src="assets/images/github_icon_black_512.png" alt="GitHub" /></a>
-                <a href="https://stackoverflow.com/story/jakie-w-rice"><img class="social-icon" src="assets/images/stackoverflow_icon_black_512.png" alt="Stack Overflow" /></a>
-            </div>
         </div>
-    </div>
-    <!--Footer-->
-    <div class="site-footer">
-        <div id="copyright">
-            <p>@ Copyright 2017 Jakie W. Rice</p>
+
+        <!--Footer-->
+        <div class="site-footer footer navbar-fixed-bottom">
+            <p id="copyright">@ Copyright 2017 Jakie W. Rice</p>
         </div>
-    </div>
+
+        <script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="
+            crossorigin="anonymous"></script>
+
+        <!-- Latest compiled and minified JavaScript -->
+        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa"
+            crossorigin="anonymous"></script>
 </body>
 
 </html>
