--- a/contact.html
+++ b/contact.html
@@ -3,73 +3,94 @@
 
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Jakie W. Rice Portfolio</title>
+
+    <!-- Latest compiled and minified CSS -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u"
+        crossorigin="anonymous">
 
     <link rel="stylesheet" type="text/css" href="assets/css/style.css">
     <link rel="stylesheet" type="text/css" href="assets/css/reset.css">
-    <link rel="stylesheet" type="text/css" href="assets/css/grid.css">
+
+
 </head>
 
 <body>
-    <!--Header and nav-->
-    <div class="header">
-        <div id="name">
-            <h1>JAKIE W. RICE</h1>
-        </div>
-        <div class="nav">
-            <ul>
-                <li><a href="index.html">About</a></li>
-                <li><a href="portfolio.html">Portfolio</a></li>
-                <li><a href="contact.html">Contact</a></li>
-            </ul>
+    <!--Header-->
+    <div class="container-fluid">
+        <div class="row header">
+            <div class="col-xs-12 col-sm-offset-2 col-sm-3" id="name">
+                <h1>JAKIE W. RICE</h1>
+            </div>
+            <div class="col-xs-12 col-sm-7 nav-items">
+                <ul>
+                    <li><a href="index.html">About</a></li>
+                    <li><a href="portfolio.html">Portfolio</a></li>
+                    <li><a href="contact.html">Contact</a></li>
+                </ul>
+            </div>
         </div>
     </div>
-    <!--Main content-->
-    <div class="main">
-        <div class="panel primary">
-            <div class="panel-header">
-                <h2>Let's Chat</h2>
-            </div>
-            <div class="contact-me">
-                <form class="contact-form">
-                    <div class="row">
-                        <!--<label for="firstname">First Name</label>-->
-                        <input type="text" name="firstname" placeholder="First Name">
-                        <!--<label for="lastname">Last Name</label>-->
-                        <input type="text" name="lastname" placeholder="Last name">
+
+    <!--Main Content-->
+    <div class="container-fluid main">
+        <div class="row">
+
+            <!--About Jakie W. Rice-->
+            <div class="col-xs-offset-1 col-xs-10 col-md-offset-1 col-md-6 card primary">
+                <div class="row">
+                    <div class="col-xs-12 card-header">
+                        <h2>Let's Chat</h2>
                     </div>
-                    <div class="row">
-                        <!--<label for="email">Email Address</label>-->
-                        <input type="email" name="email" placeholder="Email Address">
+                </div>
+                <form id="contact-form">
+                    <div class="form-group">
+                        <label for="firstName">First Name</label>
+                        <input type="email" class="form-control" id="exampleInputEmail1" placeholder="First">
                     </div>
-                    <div class="row">
-                        <!--<label for="message">Message</label>-->
-                        <textarea name="message" rows="5" cols="30" placeholder="Leave a message!"></textarea>
+                    <div class="form-group">
+                        <label for="lastName">Last Name</label>
+                        <input type="email" class="form-control" id="exampleInputEmail1" placeholder="Last">
                     </div>
-                    <div class="row">
-                        <input type="submit">
+                    <div class="form-group">
+                        <label for="exampleInputEmail1">Email address</label>
+                        <input type="email" class="form-control" id="exampleInputEmail1" placeholder="Email">
                     </div>
+                    <div class="form-group">
+                        <label for="exampleInputEmail1">Email address</label>
+                        <textarea class="form-control" id="exampleInputEmail1" placeholder="Leave me a message!"></textarea>
+                    </div>
+                    <button type="submit" class="col-xs-offset-1 col-xs-10 btn btn-default">Submit</button>
                 </form>
+
+            </div>
+
+            <!--Social Media Connection-->
+            <div class="col-xs-offset-1 col-xs-10 col-sm-offset-2 col-sm-8 col-md-offset-1 col-md-3 card social">
+                <div class="row card-header">
+                    <h2>Connect</h2>
+                </div>
+                <div id="icons">
+                    <a href="https://www.facebook.com"><img class="social-icon" src="assets/images/facebook_icon_black_512.png" alt="Facebook" /></a>
+                    <a href="https://www.linkedin.com/in/jakierice/"><img class="social-icon" src="assets/images/linkedin_icon_black_512.png" alt="LinkedIn" /></a>
+                    <a href="https://github.com/jakierice"><img class="social-icon" src="assets/images/github_icon_black_512.png" alt="GitHub" /></a>
+                    <a href="https://stackoverflow.com/story/jakie-w-rice"><img class="social-icon" src="assets/images/stackoverflow_icon_black_512.png" alt="Stack Overflow"/></a>
+                </div>
             </div>
         </div>
-        <div class="panel social">
-            <div class="panel-header">
-                <h2>Connect with Me</h2>
-            </div>
-            <div id="icons">
-                <a href="https://www.facebook.com"><img class="social-icon" src="assets/images/facebook_icon_black_512.png" alt="Facebook" /></a>
-                <a href="https://www.linkedin.com/in/jakierice/"><img class="social-icon" src="assets/images/linkedin_icon_black_512.png" alt="LinkedIn" /></a>
-                <a href="https://github.com/jakierice"><img class="social-icon" src="assets/images/github_icon_black_512.png" alt="GitHub" /></a>
-                <a href="https://stackoverflow.com/story/jakie-w-rice"><img class="social-icon" src="assets/images/stackoverflow_icon_black_512.png" alt="Stack Overflow" /></a>
-            </div>
+
+        <!--Footer-->
+        <div class="site-footer footer navbar-fixed-bottom">
+            <p id="copyright">@ Copyright 2017 Jakie W. Rice</p>
         </div>
-    </div>
-    <!--Footer-->
-    <div class="site-footer">
-        <div id="copyright">
-            <p>@ Copyright 2017 Jakie W. Rice</p>
-        </div>
-    </div>
+
+        <script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="
+            crossorigin="anonymous"></script>
+
+        <!-- Latest compiled and minified JavaScript -->
+        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa"
+            crossorigin="anonymous"></script>
 </body>
 
 </html>
