updated portfolio image links to github hosted source

--- a/contact.html
+++ b/contact.html
@@ -72,10 +72,10 @@
                     <h2>Connect</h2>
                 </div>
                 <div id="icons">
-                    <a href="https://www.facebook.com"><img class="social-icon" src="assets/images/facebook_icon_black_512.png" alt="Facebook" /></a>
-                    <a href="https://www.linkedin.com/in/jakierice/"><img class="social-icon" src="assets/images/linkedin_icon_black_512.png" alt="LinkedIn" /></a>
-                    <a href="https://github.com/jakierice"><img class="social-icon" src="assets/images/github_icon_black_512.png" alt="GitHub" /></a>
-                    <a href="https://stackoverflow.com/story/jakie-w-rice"><img class="social-icon" src="assets/images/stackoverflow_icon_black_512.png" alt="Stack Overflow"/></a>
+                    <a href="https://www.facebook.com"><img class="social-icon" src="https://github.com/jakierice/Bootstrap-Portfolio/blob/master/assets/images/facebook_icon_black_512.png?raw=true" alt="Facebook" /></a>
+                    <a href="https://www.linkedin.com/in/jakierice/"><img class="social-icon" src="https://github.com/jakierice/Bootstrap-Portfolio/blob/master/assets/images/linkedin_icon_black_512.png?raw=true" alt="LinkedIn" /></a>
+                    <a href="https://github.com/jakierice"><img class="social-icon" src="https://github.com/jakierice/Bootstrap-Portfolio/blob/master/assets/images/github_icon_black_512.png?raw=true" alt="GitHub" /></a>
+                    <a href="https://stackoverflow.com/story/jakie-w-rice"><img class="social-icon" src="https://github.com/jakierice/Bootstrap-Portfolio/blob/master/assets/images/stackoverflow_icon_black_512.png?raw=true" alt="Stack Overflow"/></a>
                 </div>
             </div>
         </div>
