--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                 </div>
                 <div class="row">
                     <div class="col-xs-12 col-sm-6">
-                        <img id="profile-pic" src="assets/images/jakie_profile_1.jpg" alt="https://docs.google.com/drawings/d/1XT6bhlmkmIUgegp1cnnURqYmBimKHxWI0Ql2cbJX7k8/pub?w=612&amp;h=614">
+                        <img id="profile-pic" src="https://github.com/jakierice/Bootstrap-Portfolio/blob/master/assets/images/jakie_profile_1.jpg?raw=true" alt="A BEAUTIFUL PICTURE!">
                     </div>
                     <p>Jakie W. Rice is the name, Jay-kee Double U Rice is the correct pronunciation. I have lived for an adventure
                         filled twenty-five years. I share my time on this planet with a beautiful wife, an incredibly brilliant
@@ -72,10 +72,10 @@
                     <h2>Connect</h2>
                 </div>
                 <div id="icons">
-                    <a href="https://www.facebook.com"><img class="social-icon" src="assets/images/facebook_icon_black_512.png" alt="Facebook" /></a>
-                    <a href="https://www.linkedin.com/in/jakierice/"><img class="social-icon" src="assets/images/linkedin_icon_black_512.png" alt="LinkedIn" /></a>
-                    <a href="https://github.com/jakierice"><img class="social-icon" src="assets/images/github_icon_black_512.png" alt="GitHub" /></a>
-                    <a href="https://stackoverflow.com/story/jakie-w-rice"><img class="social-icon" src="assets/images/stackoverflow_icon_black_512.png" alt="Stack Overflow"/></a>
+                    <a href="https://www.facebook.com"><img class="social-icon" src="https://github.com/jakierice/Bootstrap-Portfolio/blob/master/assets/images/facebook_icon_black_512.png?raw=true" alt="Facebook" /></a>
+                    <a href="https://www.linkedin.com/in/jakierice/"><img class="social-icon" src="https://github.com/jakierice/Bootstrap-Portfolio/blob/master/assets/images/linkedin_icon_black_512.png?raw=true" alt="LinkedIn" /></a>
+                    <a href="https://github.com/jakierice"><img class="social-icon" src="https://github.com/jakierice/Bootstrap-Portfolio/blob/master/assets/images/github_icon_black_512.png?raw=true" alt="GitHub" /></a>
+                    <a href="https://stackoverflow.com/story/jakie-w-rice"><img class="social-icon" src="https://github.com/jakierice/Bootstrap-Portfolio/blob/master/assets/images/stackoverflow_icon_black_512.png?raw=true" alt="Stack Overflow"/></a>
                 </div>
             </div>
         </div>
