--- a/portfolio.html
+++ b/portfolio.html
@@ -37,21 +37,20 @@
     <div class="container-fluid main">
         <div class="row">
 
-            <!--About Jakie W. Rice-->
+            <!--Projects-->
             <div class="col-xs-offset-1 col-xs-10 col-md-offset-1 col-md-6 card primary">
                 <div class="row card-header">
                     <h2>Projects Portfolio</h2>
                 </div>
                 <div class="row">
                     <div class="col-xs-12 col-sm-6 project">
-                        <!--<img class="placeholder-pic" src="assets/images/halloffame.jpg" alt="Country Fame" />-->
-                        <img class="placeholder-pic" src="assets/images/halloffame.jpg " alt="https://docs.google.com/drawings/d/1GP2sxnfE8WedVe6rnsIlKO8tSi75UOEBFOdc2-9Xgdk/pub?w=927&amp;h=662">
+                        <img class="placeholder-pic" src="https://github.com/jakierice/Bootstrap-Portfolio/blob/master/assets/images/halloffame.JPG?raw=true" alt="BROKEN PICTURE LINKS!!!">
                         <div class="col-xs-12 col-sm-6 project-title">
                             <h3>Recorded Gold</h3>
                         </div>
                     </div>
                     <div class="col-xs-12 col-sm-6 project">
-                        <img class="placeholder-pic" src="assets/images/elvisbar.jpg " alt="https://docs.google.com/drawings/d/1fMvUSooe4yCfe4mi2_7gCXPVdV4NcAxd1gbjz0422FQ/pub?w=927&amp;h=662">
+                        <img class="placeholder-pic" src="https://github.com/jakierice/Bootstrap-Portfolio/blob/master/assets/images/elvisbar.JPG?raw=true" alt="BROKEN PICTURE LINKS!!!">
                         <div class="col-xs-12 col-sm-6 project-title">
                             <h3>Drink with Elvis</h3>
                         </div>
@@ -59,13 +58,13 @@
                 </div>
                 <div class="row">
                     <div class="col-xs-12 col-sm-6 project">
-                        <img class="placeholder-pic" src="assets/images/visionaryartmuseum.jpg " alt="https://docs.google.com/drawings/d/1QyCRdYsARC1JaDPmA6egMeyzXjnK7uZpXTjaIhwyQtI/pub?w=927&amp;h=665">
+                        <img class="placeholder-pic" src="https://github.com/jakierice/Bootstrap-Portfolio/blob/master/assets/images/visionaryartmuseum.JPG?raw=true" alt="BROKEN PICTURE LINKS!!!">
                         <div class="col-xs-12 col-sm-6 project-title">
                             <h3>Envision Art</h3>
                         </div>
                     </div>
                     <div class="col-xs-12 col-sm-6 project">
-                        <img class="placeholder-pic" src="assets/images/cherry_blossoms.jpg " alt="https://docs.google.com/drawings/d/1ot-LomHL3T3BiTleUMYGj8bc69dgGnAH4BUfdLGSo0g/pub?w=629&amp;h=449">
+                        <img class="placeholder-pic" src="https://github.com/jakierice/Bootstrap-Portfolio/blob/master/assets/images/cherry_blossoms.JPG?raw=true" alt="BROKEN PICTURE LINKS!!!">
                         <div class="col-xs-12 col-sm-6 project-title">
                             <h3>Blossom the Cherries</h3>
                         </div>
@@ -73,7 +72,7 @@
                 </div>
                 <div class="row">
                     <div class="col-xs-12 col-sm-6 project">
-                        <img class="placeholder-pic" src="assets/images/baltimore.jpg " alt="https://docs.google.com/drawings/d/1YVj92UHEz-yM68DuVSP6P1iAa5a7g0CBiouPxUDKGmU/pub?w=927&amp;h=663">
+                        <img class="placeholder-pic" src="https://github.com/jakierice/Bootstrap-Portfolio/blob/master/assets/images/baltimore.JPG?raw=true" alt="BROKEN PICTURE LINKS!!!">
                         <div class="col-xs-12 col-sm-6 project-title">
                             <h3>Dive into Baltimore</h3>
                         </div>
@@ -87,10 +86,10 @@
                     <h2>Connect</h2>
                 </div>
                 <div id="icons">
-                    <a href="https://www.facebook.com"><img class="social-icon" src="assets/images/facebook_icon_black_512.png" alt="Facebook" /></a>
-                    <a href="https://www.linkedin.com/in/jakierice/"><img class="social-icon" src="assets/images/linkedin_icon_black_512.png" alt="LinkedIn" /></a>
-                    <a href="https://github.com/jakierice"><img class="social-icon" src="assets/images/github_icon_black_512.png" alt="GitHub" /></a>
-                    <a href="https://stackoverflow.com/story/jakie-w-rice"><img class="social-icon" src="assets/images/stackoverflow_icon_black_512.png" alt="Stack Overflow"/></a>
+                    <a href="https://www.facebook.com"><img class="social-icon" src="https://github.com/jakierice/Bootstrap-Portfolio/blob/master/assets/images/facebook_icon_black_512.png?raw=true" alt="Facebook" /></a>
+                    <a href="https://www.linkedin.com/in/jakierice/"><img class="social-icon" src="https://github.com/jakierice/Bootstrap-Portfolio/blob/master/assets/images/linkedin_icon_black_512.png?raw=true" alt="LinkedIn" /></a>
+                    <a href="https://github.com/jakierice"><img class="social-icon" src="https://github.com/jakierice/Bootstrap-Portfolio/blob/master/assets/images/github_icon_black_512.png?raw=true" alt="GitHub" /></a>
+                    <a href="https://stackoverflow.com/story/jakie-w-rice"><img class="social-icon" src="https://github.com/jakierice/Bootstrap-Portfolio/blob/master/assets/images/stackoverflow_icon_black_512.png?raw=true" alt="Stack Overflow"/></a>
                 </div>
             </div>
         </div>
