changed mobile card size to full width

--- a/index.html
+++ b/index.html
@@ -12,8 +12,6 @@
 
     <link rel="stylesheet" type="text/css" href="assets/css/style.css">
     <link rel="stylesheet" type="text/css" href="assets/css/reset.css">
-
-
 </head>
 
 <body>
@@ -38,13 +36,14 @@
         <div class="row">
 
             <!--About Jakie W. Rice-->
-            <div class="col-xs-offset-1 col-xs-10 col-md-offset-1 col-md-6 card primary">
+            <div class="col-xs-12 col-sm-offset-1 col-sm-10 col-md-offset-1 col-md-6 card primary">
                 <div class="row card-header">
                     <h2>About Jakie W. Rice</h2>
                 </div>
                 <div class="row">
                     <div class="col-xs-12 col-sm-6">
-                        <img id="profile-pic" src="https://github.com/jakierice/Bootstrap-Portfolio/blob/master/assets/images/jakie_profile_1.jpg?raw=true" alt="A BEAUTIFUL PICTURE!">
+                        <img id="profile-pic" src="https://github.com/jakierice/Bootstrap-Portfolio/blob/master/assets/images/jakie_profile_1.jpg?raw=true"
+                            alt="A BEAUTIFUL PICTURE!">
                     </div>
                     <p>Jakie W. Rice is the name, Jay-kee Double U Rice is the correct pronunciation. I have lived for an adventure
                         filled twenty-five years. I share my time on this planet with a beautiful wife, an incredibly brilliant
@@ -67,7 +66,7 @@
             </div>
 
             <!--Social Media Connection-->
-            <div class="col-xs-offset-1 col-xs-10 col-sm-offset-2 col-sm-8 col-md-offset-1 col-md-3 card social">
+            <div class="col-xs-12 col-sm-offset-2 col-sm-8 col-md-offset-1 col-md-3 card social">
                 <div class="row card-header">
                     <h2>Connect</h2>
                 </div>
