--- a/portfolio.html
+++ b/portfolio.html
@@ -12,8 +12,6 @@
 
     <link rel="stylesheet" type="text/css" href="assets/css/style.css">
     <link rel="stylesheet" type="text/css" href="assets/css/reset.css">
-
-
 </head>
 
 <body>
@@ -38,7 +36,7 @@
         <div class="row">
 
             <!--Projects-->
-            <div class="col-xs-offset-1 col-xs-10 col-md-offset-1 col-md-6 card primary">
+            <div class="col-xs-12 col-sm-offset-1 col-sm-10 col-md-offset-1 col-md-6 card primary">
                 <div class="row card-header">
                     <h2>Projects Portfolio</h2>
                 </div>
@@ -81,7 +79,7 @@
             </div>
 
             <!--Social Media Connection-->
-            <div class="col-xs-offset-1 col-xs-10 col-sm-offset-2 col-sm-8 col-md-offset-1 col-md-3 card social">
+            <div class="col-xs-12 col-sm-offset-2 col-sm-8 col-md-offset-1 col-md-3 card social">
                 <div class="row card-header">
                     <h2>Connect</h2>
                 </div>
