fixed squeezy load issue

--- a/portfolio.html
+++ b/portfolio.html
@@ -31,47 +31,52 @@
         </div>
     </div>
 
-    <!--Main Content-->
+    <!--Projects Portfolio Main Content-->
     <div class="container-fluid main">
         <div class="row">
 
-            <!--Projects-->
+            <!--About Jakie W. Rice-->
             <div class="col-xs-12 col-sm-offset-1 col-sm-10 col-md-offset-1 col-md-6 card primary">
                 <div class="row card-header">
                     <h2>Projects Portfolio</h2>
                 </div>
                 <div class="row">
-                    <div class="col-xs-12 col-sm-6 project">
-                        <img class="placeholder-pic" src="https://github.com/jakierice/Bootstrap-Portfolio/blob/master/assets/images/halloffame.JPG?raw=true" alt="BROKEN PICTURE LINKS!!!">
-                        <div class="col-xs-12 col-sm-6 project-title">
+                    <div class="col-xs-12 col-sm-6 col-md-6 project">
+                        <img class="placeholder-pic" src="https://github.com/jakierice/Bootstrap-Portfolio/blob/master/assets/images/halloffame.JPG?raw=true"
+                            alt="BROKEN PICTURE LINKS!!!">
+                        <div class="col-xs-12 col-sm-6 col-md-6 project-title">
                             <h3>Recorded Gold</h3>
                         </div>
                     </div>
-                    <div class="col-xs-12 col-sm-6 project">
-                        <img class="placeholder-pic" src="https://github.com/jakierice/Bootstrap-Portfolio/blob/master/assets/images/elvisbar.JPG?raw=true" alt="BROKEN PICTURE LINKS!!!">
-                        <div class="col-xs-12 col-sm-6 project-title">
+                    <div class="col-xs-12 col-sm-6 col-md-6 project">
+                        <img class="placeholder-pic" src="https://github.com/jakierice/Bootstrap-Portfolio/blob/master/assets/images/elvisbar.JPG?raw=true"
+                            alt="BROKEN PICTURE LINKS!!!">
+                        <div class="col-xs-12 col-sm-6 col-md-6 project-title">
                             <h3>Drink with Elvis</h3>
                         </div>
                     </div>
                 </div>
                 <div class="row">
-                    <div class="col-xs-12 col-sm-6 project">
-                        <img class="placeholder-pic" src="https://github.com/jakierice/Bootstrap-Portfolio/blob/master/assets/images/visionaryartmuseum.JPG?raw=true" alt="BROKEN PICTURE LINKS!!!">
-                        <div class="col-xs-12 col-sm-6 project-title">
+                    <div class="col-xs-12 col-sm-6 col-md-6 project">
+                        <img class="placeholder-pic" src="https://github.com/jakierice/Bootstrap-Portfolio/blob/master/assets/images/visionaryartmuseum.JPG?raw=true"
+                            alt="BROKEN PICTURE LINKS!!!">
+                        <div class="col-xs-12 col-sm-6 col-md-6 project-title">
                             <h3>Envision Art</h3>
                         </div>
                     </div>
-                    <div class="col-xs-12 col-sm-6 project">
-                        <img class="placeholder-pic" src="https://github.com/jakierice/Bootstrap-Portfolio/blob/master/assets/images/cherry_blossoms.JPG?raw=true" alt="BROKEN PICTURE LINKS!!!">
-                        <div class="col-xs-12 col-sm-6 project-title">
+                    <div class="col-xs-12 col-sm-6 col-md-6 project">
+                        <img class="placeholder-pic" src="https://github.com/jakierice/Bootstrap-Portfolio/blob/master/assets/images/cherry_blossoms.JPG?raw=true"
+                            alt="BROKEN PICTURE LINKS!!!">
+                        <div class="col-xs-12 col-sm-6 col-md-6 project-title">
                             <h3>Blossom the Cherries</h3>
                         </div>
                     </div>
                 </div>
                 <div class="row">
-                    <div class="col-xs-12 col-sm-6 project">
-                        <img class="placeholder-pic" src="https://github.com/jakierice/Bootstrap-Portfolio/blob/master/assets/images/baltimore.JPG?raw=true" alt="BROKEN PICTURE LINKS!!!">
-                        <div class="col-xs-12 col-sm-6 project-title">
+                    <div class="col-xs-12 col-sm-6 col-md-6 project">
+                        <img class="placeholder-pic" src="https://github.com/jakierice/Bootstrap-Portfolio/blob/master/assets/images/baltimore.JPG?raw=true"
+                            alt="BROKEN PICTURE LINKS!!!">
+                        <div class="col-xs-12 col-sm-6 col-md-6 project-title">
                             <h3>Dive into Baltimore</h3>
                         </div>
                     </div>
@@ -91,18 +96,19 @@
                 </div>
             </div>
         </div>
+    </div>
 
-        <!--Footer-->
-        <div class="site-footer footer navbar-fixed-bottom">
-            <p id="copyright">@ Copyright 2017 Jakie W. Rice</p>
-        </div>
+    <!--Footer-->
+    <div class="site-footer footer navbar-fixed-bottom">
+        <p id="copyright">@ Copyright 2017 Jakie W. Rice</p>
+    </div>
 
-        <script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="
-            crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="
+        crossorigin="anonymous"></script>
 
-        <!-- Latest compiled and minified JavaScript -->
-        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa"
-            crossorigin="anonymous"></script>
+    <!-- Latest compiled and minified JavaScript -->
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa"
+        crossorigin="anonymous"></script>
 </body>
 
 </html>
